Rerun cosim at hpsc

--- a/jwang/notes/test_ev_ssm_prof.ipynb
+++ b/jwang/notes/test_ev_ssm_prof.ipynb
@@ -122,32 +122,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         21977576 function calls (21970797 primitive calls) in 7.683 seconds\n",
+      "         220743471 function calls (220672696 primitive calls) in 73.524 seconds\n",
       "\n",
       "   Ordered by: internal time\n",
-      "   List reduced from 1146 to 20 due to restriction <20>\n",
+      "   List reduced from 1149 to 20 due to restriction <20>\n",
       "\n",
       "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
-      "  1103686    1.619    0.000    3.666    0.000 series.py:943(__getitem__)\n",
-      "5992986/5992854    0.604    0.000    0.740    0.000 {built-in method builtins.isinstance}\n",
-      "  1105037    0.517    0.000    0.859    0.000 indexing.py:2486(check_deprecated_indexers)\n",
-      "751405/751397    0.443    0.000    1.310    0.000 generic.py:5577(__setattr__)\n",
-      "   374416    0.393    0.000    2.047    0.000 apply.py:982(series_generator)\n",
-      "  1104662    0.332    0.000    0.536    0.000 series.py:687(_values)\n",
-      "      107    0.287    0.003    6.955    0.065 apply.py:862(apply_series_generator)\n",
-      "   375785    0.255    0.000    0.809    0.000 series.py:640(name)\n",
-      "    11700    0.253    0.000    0.369    0.000 {method 'choice' of 'numpy.random.mtrand.RandomState' objects}\n",
-      "   374309    0.246    0.000    0.289    0.000 managers.py:1898(set_values)\n",
-      "  1105106    0.215    0.000    0.314    0.000 common.py:346(apply_if_callable)\n",
-      "  1104662    0.204    0.000    0.204    0.000 managers.py:1862(internal_values)\n",
-      "    77220    0.170    0.000    0.175    0.000 ev_ssm.py:67(find_x)\n",
-      "   751588    0.150    0.000    0.279    0.000 common.py:1740(<genexpr>)\n",
-      "   377129    0.141    0.000    0.421    0.000 {built-in method builtins.all}\n",
-      "   375794    0.135    0.000    0.554    0.000 common.py:1721(validate_all_hashable)\n",
-      "  1105344    0.112    0.000    0.112    0.000 {pandas._libs.lib.is_scalar}\n",
-      "  1107035    0.103    0.000    0.103    0.000 {pandas._libs.lib.is_integer}\n",
-      "  1105622    0.100    0.000    0.100    0.000 {built-in method builtins.callable}\n",
-      "   378025    0.091    0.000    0.130    0.000 inference.py:321(is_hashable)\n",
+      " 10998003   15.606    0.000   36.087    0.000 series.py:943(__getitem__)\n",
+      "59898807/59897559    6.173    0.000    7.631    0.000 {built-in method builtins.isinstance}\n",
+      " 11011181    5.196    0.000    8.682    0.000 indexing.py:2486(check_deprecated_indexers)\n",
+      "7792786/7792766    4.470    0.000   13.453    0.000 generic.py:5577(__setattr__)\n",
+      "  3883066    3.982    0.000   20.917    0.000 apply.py:982(series_generator)\n",
+      " 11008449    3.262    0.000    5.210    0.000 series.py:687(_values)\n",
+      "     1111    2.903    0.003   66.495    0.060 apply.py:862(apply_series_generator)\n",
+      "  3897635    2.552    0.000    8.363    0.000 series.py:640(name)\n",
+      "  3881955    2.497    0.000    2.926    0.000 managers.py:1898(set_values)\n",
+      " 11012337    2.108    0.000    3.144    0.000 common.py:346(apply_if_callable)\n",
+      " 11008449    1.945    0.000    1.948    0.000 managers.py:1862(internal_values)\n",
+      "   730080    1.613    0.000    1.657    0.000 ev_ssm.py:67(find_x)\n",
+      "  7795468    1.584    0.000    2.999    0.000 common.py:1740(<genexpr>)\n",
+      "  3911432    1.437    0.000    4.456    0.000 {built-in method builtins.all}\n",
+      "  3897734    1.383    0.000    5.811    0.000 common.py:1721(validate_all_hashable)\n",
+      " 11014649    1.132    0.000    1.132    0.000 {pandas._libs.lib.is_scalar}\n",
+      " 11030493    1.060    0.000    1.060    0.000 {pandas._libs.lib.is_integer}\n",
+      " 11017318    1.037    0.000    1.037    0.000 {built-in method builtins.callable}\n",
+      "  3920772    0.999    0.000    1.428    0.000 inference.py:321(is_hashable)\n",
+      "  4066767    0.950    0.000    1.452    0.000 generic.py:43(_check)\n",
       "\n",
       "\n"
      ]
@@ -155,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "<pstats.Stats at 0x7f239114abb0>"
+       "<pstats.Stats at 0x7f8b2c9b3040>"
       ]
      },
      "execution_count": 5,
