--- a/jwang/notes/cosim_ev_S2.ipynb
+++ b/jwang/notes/cosim_ev_S2.ipynb
@@ -4747,23 +4747,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosim_out.to_csv('cosim_18_S_out.csv', index=False)\n",
-    "sse_out.to_csv('cosim_18_S_sse.csv', index=False)\n",
-    "bu_df.to_csv('cosim_18_S_bu.csv', index=False)\n",
-    "bd_df.to_csv('cosim_18_S_bd.csv', index=False)\n",
-    "pg_df.to_csv('cosim_18_S_pg.csv', index=False)\n",
-    "agc_mile.to_csv('cosim_18_S_agcm.csv', index=False)\n",
-    "sfr_res.to_csv('cosim_18_S_sfr.csv', index=False)\n",
-    "ev_agc.to_csv('cosim_18_S_evagc.csv', index=False)\n",
-    "ev_soc.to_csv('cosim_18_S_evsoc.csv', index=False)\n",
-    "sse.ev.to_csv('cosim_18_S_evdata.csv', index=False)\n",
+    "sim_name = '_S'\n",
+    "cosim_out.to_csv('cosim_18' + sim_name + '_out.csv', index=False)\n",
+    "sse_out.to_csv('cosim_18' + sim_name + '_sse.csv', index=False)\n",
+    "bu_df.to_csv('cosim_18' + sim_name + '_bu.csv', index=False)\n",
+    "bd_df.to_csv('cosim_18' + sim_name + '_bd.csv', index=False)\n",
+    "pg_df.to_csv('cosim_18' + sim_name + '_pg.csv', index=False)\n",
+    "agc_mile.to_csv('cosim_18' + sim_name + '_agcm.csv', index=False)\n",
+    "sfr_res.to_csv('cosim_18' + sim_name + '_sfr.csv', index=False)\n",
+    "ev_agc.to_csv('cosim_18' + sim_name + '_evagc.csv', index=False)\n",
+    "ev_soc.iloc[0:800].to_csv('cosim_18' + sim_name + '_evsoc1.csv', index=False)\n",
+    "ev_soc.iloc[800:].to_csv('cosim_18' + sim_name + '_evsoc2.csv', index=False)\n",
+    "sse.ev.to_csv('cosim_18' + sim_name + '_evdata.csv', index=False)\n",
     "\n",
     "import csv\n",
-    "new_path = open('cosim_18_S_rted.csv', 'w')\n",
+    "new_path = open('cosim_18' + sim_name + '_rted.csv', 'w')\n",
     "z = csv.writer(new_path)\n",
     "for new_k, new_v in rted_res.items():\n",
     "    z.writerow([new_k, new_v])\n",
