--- a/jwang/notes/test_ev_ssm.ipynb
+++ b/jwang/notes/test_ev_ssm.ipynb
@@ -42,6 +42,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sse = ev_ssm(ts=18, N=50000, step=1, tp=40,\n",
+    "             lr=0.1, lp=60, seed=2022, name=\"EVA\",\n",
+    "             n_pref=1, is_report=True,\n",
+    "             tt_mean=0.3, tt_var=0.01, tt_lb=0, tt_ub=0.6,\n",
+    "             ict_off=False, ecc_off=False)\n",
+    "sse.load_A(\"Aest.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- Replay ---\n",
     "# Replay EV control signal from recorded data\n",
     "sse_out = pd.read_csv('sse_out.csv')\n",
@@ -595,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
