--- a/jwang/notes/test_ev_ssm_speed.ipynb
+++ b/jwang/notes/test_ev_ssm_speed.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "[23.844112764286482, 1.82771328502618]"
+       "[24.629258030047083, 1.8878967125704145]"
       ]
      },
      "execution_count": 3,
@@ -119,9 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n= 10000 mean[ms]= 0.6 std[ms]= 0.4\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "tl = []\n",
@@ -136,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n= 100 mean= 0.0336 std= 0.0075\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "tl = []\n",
@@ -154,9 +170,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         15710728 function calls (15648835 primitive calls) in 23.504 seconds\n",
+      "\n",
+      "   Ordered by: internal time\n",
+      "   List reduced from 1248 to 20 due to restriction <20>\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "   742201    3.874    0.000   11.693    0.000 series.py:967(__getitem__)\n",
+      "4684556/4671385    2.995    0.000    4.324    0.000 {built-in method builtins.isinstance}\n",
+      "   754628    2.144    0.000    3.848    0.000 indexing.py:2652(check_deprecated_indexers)\n",
+      "   750277    0.984    0.000    1.530    0.000 series.py:709(_values)\n",
+      "   754113    0.856    0.000    1.279    0.000 common.py:352(apply_if_callable)\n",
+      "   277369    0.837    0.000    1.994    0.000 apply.py:993(series_generator)\n",
+      "   277290    0.718    0.000   12.315    0.000 ev_ssm.py:468(<lambda>)\n",
+      "       79    0.678    0.009   16.237    0.206 apply.py:873(apply_series_generator)\n",
+      "   277290    0.665    0.000    0.835    0.000 managers.py:2093(set_values)\n",
+      "   750277    0.541    0.000    0.546    0.000 managers.py:2038(internal_values)\n",
+      "   426788    0.538    0.000    1.327    0.000 generic.py:45(_instancecheck)\n",
+      "   426788    0.529    0.000    0.781    0.000 generic.py:40(_check)\n",
+      "   761297    0.446    0.000    0.446    0.000 {pandas._libs.lib.is_scalar}\n",
+      "   763800    0.434    0.000    0.434    0.000 {pandas._libs.lib.is_integer}\n",
+      "   757837    0.425    0.000    0.425    0.000 {built-in method builtins.callable}\n",
+      "   297785    0.369    0.000    0.505    0.000 generic.py:5909(__setattr__)\n",
+      "467604/425111    0.334    0.000    0.393    0.000 {built-in method builtins.len}\n",
+      "   466915    0.286    0.000    0.291    0.000 {built-in method builtins.getattr}\n",
+      "9790/9711    0.110    0.000    1.054    0.000 series.py:343(__init__)\n",
+      "     1626    0.098    0.000    0.134    0.000 range.py:399(_get_indexer)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pstats.Stats at 0x7f3ef3b4bf70>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats = pstats.Stats(prof).strip_dirs().sort_stats(\"tottime\")\n",
     "stats.print_stats(20)"
@@ -165,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('andes')",
+   "display_name": "Python 3.9.13 ('andes')",
    "language": "python",
    "name": "python3"
   },
@@ -179,11 +240,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6a84c9bd36470760912997fd6b8a7b4d8967e7c311e7c806624c05154cbea18f"
+    "hash": "b2f979d891be15b14f4332b6eed75a0475160d17003978b44c1d0bc62ad71649"
    }
   }
  },
