--- a/jwang/notes/cosim_ev_model_agg_benchmark.ipynb
+++ b/jwang/notes/cosim_ev_model_agg_benchmark.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4541.dev0+g23b96e8\n",
+      "0.post4542.dev0+gd84fd98\n",
       "2.8.0\n"
      ]
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,13 +311,29 @@
      "text": [
       "EVA: Load A from Aest.csv.\n"
      ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# --- normal operation ---\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# # run\u001b[39;00m\n\u001b[1;32m      4\u001b[0m end_time \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1200\u001b[39m  \u001b[38;5;66;03m# 3600\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m ss1, se1, pa1 \u001b[38;5;241m=\u001b[39m \u001b[43mrun_ss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime_len\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mend_time\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m ss2, se2, pa2 \u001b[38;5;241m=\u001b[39m run_ss(m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, time_len\u001b[38;5;241m=\u001b[39mend_time)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# # plot\u001b[39;00m\n",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36mrun_ss\u001b[0;34m(m, time_len)\u001b[0m\n\u001b[1;32m     74\u001b[0m ss\u001b[38;5;241m.\u001b[39mDG\u001b[38;5;241m.\u001b[39mset(attr\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mv\u001b[39m\u001b[38;5;124m'\u001b[39m, idx\u001b[38;5;241m=\u001b[39mev_idx, src\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpref0\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     75\u001b[0m           value\u001b[38;5;241m=\u001b[39mp_value)\n\u001b[1;32m     77\u001b[0m ss\u001b[38;5;241m.\u001b[39mTDS\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mtf \u001b[38;5;241m=\u001b[39m end_time\n\u001b[0;32m---> 78\u001b[0m \u001b[43mss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTDS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ss\u001b[38;5;241m.\u001b[39mexit_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/work/andes/andes/routines/tds.py:377\u001b[0m, in \u001b[0;36mTDS.run\u001b[0;34m(self, no_summary, **kwargs)\u001b[0m\n\u001b[1;32m    375\u001b[0m \u001b[38;5;66;03m# call the stepping method of the integration method (or data replay)\u001b[39;00m\n\u001b[1;32m    376\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_csv \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 377\u001b[0m     step_status \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitm_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# compute for the current step\u001b[39;00m\n\u001b[1;32m    378\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    379\u001b[0m     step_status \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_csv_step()\n",
+      "File \u001b[0;32m~/Documents/work/andes/andes/routines/tds.py:505\u001b[0m, in \u001b[0;36mTDS.itm_step\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    495\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mitm_step\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    496\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    497\u001b[0m \u001b[38;5;124;03m    Integrate for the step size of ``self.h`` using implicit trapezoid method.\u001b[39;00m\n\u001b[1;32m    498\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    503\u001b[0m \n\u001b[1;32m    504\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 505\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmethod\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/work/andes/andes/routines/daeint.py:93\u001b[0m, in \u001b[0;36mImplicitIter.step\u001b[0;34m(tds)\u001b[0m\n\u001b[1;32m     90\u001b[0m     gys \u001b[38;5;241m=\u001b[39m dae\u001b[38;5;241m.\u001b[39mgy\n\u001b[1;32m     92\u001b[0m \u001b[38;5;66;03m# calculate complete Jacobian matrix ``Ac```\u001b[39;00m\n\u001b[0;32m---> 93\u001b[0m tds\u001b[38;5;241m.\u001b[39mAc \u001b[38;5;241m=\u001b[39m \u001b[43mtds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmethod\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalc_jac\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgxs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgys\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;66;03m# equation `tds.qg[:dae.n] = 0` is the implicit form of differential equations using ITM\u001b[39;00m\n\u001b[1;32m     96\u001b[0m tds\u001b[38;5;241m.\u001b[39mqg[:dae\u001b[38;5;241m.\u001b[39mn] \u001b[38;5;241m=\u001b[39m tds\u001b[38;5;241m.\u001b[39mmethod\u001b[38;5;241m.\u001b[39mcalc_q(dae\u001b[38;5;241m.\u001b[39mx, dae\u001b[38;5;241m.\u001b[39mf, dae\u001b[38;5;241m.\u001b[39mTf, tds\u001b[38;5;241m.\u001b[39mh, tds\u001b[38;5;241m.\u001b[39mx0, tds\u001b[38;5;241m.\u001b[39mf0)\n",
+      "File \u001b[0;32m~/Documents/work/andes/andes/routines/daeint.py:221\u001b[0m, in \u001b[0;36mTrapezoid.calc_jac\u001b[0;34m(tds, gxs, gys)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    216\u001b[0m \u001b[38;5;124;03mBuild full Jacobian matrix ``Ac`` for Trapezoid method.\u001b[39;00m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    219\u001b[0m dae \u001b[38;5;241m=\u001b[39m tds\u001b[38;5;241m.\u001b[39msystem\u001b[38;5;241m.\u001b[39mdae\n\u001b[0;32m--> 221\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTeye\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mh\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdae\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgxs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    222\u001b[0m \u001b[43m               \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mtds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mh\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdae\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgys\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43md\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "# --- normal operation ---\n",
     "\n",
     "# # run\n",
-    "end_time = 3600  # 3600\n",
+    "end_time = 1200  # 3600\n",
     "ss1, se1, pa1 = run_ss(m=1, time_len=end_time)\n",
     "ss2, se2, pa2 = run_ss(m=2, time_len=end_time)\n",
     "\n",
