--- a/jwang/notes/cosim_ev_ieee39_f.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_f.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4558.dev0+g849a249\n",
+      "0.post4560.dev0+g156870b\n",
       "2.8.0\n"
      ]
     }
@@ -84,6 +84,8 @@
    "source": [
     "# if save the data to CSV\n",
     "save_data = True\n",
+    "file_beging = 'cosim_'\n",
+    "sim_name = 'ieee39_f'\n",
     "\n",
     "# case parameters\n",
     "caseH = 18  # start time [H] of the co-simulation\n",
@@ -725,44 +727,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
+      "  0%|                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4658.49\n",
-      "  8%|█████████▋                                                                                                          | 299/3600 [00:28<05:31,  9.94it/s]RTED GB model is loaded.\n",
+      "  8%|████████▎                                                                                           | 299/3600 [00:29<05:48,  9.47it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4648.071\n",
-      " 17%|███████████████████▎                                                                                                | 600/3600 [00:59<05:15,  9.50it/s]RTED GB model is loaded.\n",
+      " 17%|████████████████▋                                                                                   | 600/3600 [01:00<05:27,  9.17it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4683.954\n",
-      " 25%|█████████████████████████████                                                                                       | 900/3600 [01:34<05:20,  8.44it/s]RTED GB model is loaded.\n",
+      " 25%|█████████████████████████                                                                           | 900/3600 [01:36<05:28,  8.22it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4686.326\n",
-      " 33%|██████████████████████████████████████▎                                                                            | 1200/3600 [02:15<05:29,  7.27it/s]RTED GB model is loaded.\n",
+      " 33%|█████████████████████████████████                                                                  | 1200/3600 [02:17<05:31,  7.23it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4699.668\n",
-      " 42%|███████████████████████████████████████████████▉                                                                   | 1500/3600 [03:00<05:35,  6.27it/s]RTED GB model is loaded.\n",
+      " 42%|█████████████████████████████████████████▎                                                         | 1500/3600 [03:03<07:32,  4.64it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4696.062\n",
-      " 50%|█████████████████████████████████████████████████████████▌                                                         | 1800/3600 [03:48<05:02,  5.95it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████▌                                                 | 1800/3600 [45:24<05:04,  5.91it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.428\n",
-      " 58%|███████████████████████████████████████████████████████████████████                                                | 2100/3600 [04:39<04:06,  6.08it/s]RTED GB model is loaded.\n",
+      " 58%|█████████████████████████████████████████████████████████▊                                         | 2100/3600 [46:11<03:53,  6.44it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4737.223\n",
-      " 67%|████████████████████████████████████████████████████████████████████████████▋                                      | 2400/3600 [05:33<03:36,  5.55it/s]RTED GB model is loaded.\n",
+      " 67%|██████████████████████████████████████████████████████████████████                                 | 2400/3600 [47:01<03:17,  6.08it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.506\n",
-      " 75%|██████████████████████████████████████████████████████████████████████████████████████▎                            | 2700/3600 [06:30<02:50,  5.28it/s]RTED GB model is loaded.\n",
+      " 75%|██████████████████████████████████████████████████████████████████████████▎                        | 2700/3600 [47:56<02:37,  5.71it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.456\n",
-      " 83%|███████████████████████████████████████████████████████████████████████████████████████████████▊                   | 3000/3600 [07:27<01:37,  6.12it/s]RTED GB model is loaded.\n",
+      " 83%|██████████████████████████████████████████████████████████████████████████████████▌                | 3000/3600 [48:50<01:38,  6.10it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4673.707\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████████████▍         | 3300/3600 [08:18<00:50,  5.94it/s]RTED GB model is loaded.\n",
+      " 92%|██████████████████████████████████████████████████████████████████████████████████████████▊        | 3300/3600 [49:40<00:49,  6.03it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4676.861\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [09:12<00:00,  6.51it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [50:32<00:00,  1.19it/s]\n"
      ]
     }
    ],
@@ -876,31 +878,17 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully save data.\n"
+     ]
+    }
+   ],
    "source": [
-    "if save_data:\n",
-    "    # --- save output ---\n",
-    "    file_beging = 'cosim_'\n",
-    "    sim_name = 'ieee39_f'\n",
-    "\n",
-    "    cosim_out.to_csv(file_beging + sim_name + '_out.csv', index=False)\n",
-    "    sse_out.to_csv(file_beging + sim_name + '_sse.csv', index=False)\n",
-    "    bu_df.to_csv(file_beging + sim_name + '_bu.csv', index=False)\n",
-    "    bd_df.to_csv(file_beging + sim_name + '_bd.csv', index=False)\n",
-    "    pg_df.to_csv(file_beging + sim_name + '_pg.csv', index=False)\n",
-    "    agc_mile.to_csv(file_beging + sim_name + '_agcm.csv', index=False)\n",
-    "    sfr_res.to_csv(file_beging + sim_name + '_sfr.csv', index=False)\n",
-    "    ev_agc.to_csv(file_beging + sim_name + '_evagc.csv', index=False)\n",
-    "    ev_soc.iloc[0:800].to_csv(file_beging + sim_name + '_evsoc1.csv', index=False)\n",
-    "    ev_soc.iloc[800:].to_csv(file_beging + sim_name + '_evsoc2.csv', index=False)\n",
-    "    sse.ev.to_csv(file_beging + sim_name + '_evdata.csv', index=False)\n",
-    "\n",
-    "    import csv\n",
-    "    new_path = open(file_beging + sim_name + '_rted.csv', 'w')\n",
-    "    z = csv.writer(new_path)\n",
-    "    for new_k, new_v in rted_res.items():\n",
-    "        z.writerow([new_k, new_v])\n",
-    "    new_path.close()"
+    "%run -i 'cosim_savedata.py'"
    ]
   }
  ],
