--- a/jwang/notes/cosim_ev_ieee39_s.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_s.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4558.dev0+g849a249\n",
+      "0.post4560.dev0+g156870b\n",
       "2.8.0\n"
      ]
     }
@@ -77,6 +77,8 @@
    "source": [
     "# if save the data to CSV\n",
     "save_data = True\n",
+    "file_beging = 'cosim_'\n",
+    "sim_name = 'ieee39_s'\n",
     "\n",
     "# case parameters\n",
     "caseH = 18  # start time [H] of the co-simulation\n",
@@ -719,44 +721,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
+      "  0%|                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4660.003\n",
-      "  8%|█████████▋                                                                                                          | 299/3600 [00:19<03:45, 14.64it/s]RTED GB model is loaded.\n",
+      "  8%|████████▎                                                                                           | 299/3600 [00:20<03:36, 15.28it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4661.806\n",
-      " 17%|███████████████████▎                                                                                                | 599/3600 [00:40<03:42, 13.52it/s]RTED GB model is loaded.\n",
+      " 17%|████████████████▋                                                                                   | 599/3600 [00:41<03:42, 13.49it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4684.579\n",
-      " 25%|████████████████████████████▉                                                                                       | 899/3600 [01:06<04:20, 10.36it/s]RTED GB model is loaded.\n",
+      " 25%|████████████████████████▉                                                                           | 899/3600 [01:06<03:49, 11.79it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4701.647\n",
-      " 33%|██████████████████████████████████████▎                                                                            | 1200/3600 [01:39<04:31,  8.83it/s]RTED GB model is loaded.\n",
+      " 33%|█████████████████████████████████                                                                  | 1200/3600 [01:39<04:31,  8.85it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.302\n",
-      " 42%|███████████████████████████████████████████████▉                                                                   | 1500/3600 [02:15<04:16,  8.17it/s]RTED GB model is loaded.\n",
+      " 42%|█████████████████████████████████████████▎                                                         | 1500/3600 [02:14<04:10,  8.39it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4710.702\n",
-      " 50%|█████████████████████████████████████████████████████████▌                                                         | 1800/3600 [02:55<04:09,  7.20it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████▌                                                 | 1800/3600 [02:53<03:59,  7.51it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4713.401\n",
-      " 58%|███████████████████████████████████████████████████████████████████                                                | 2100/3600 [03:39<03:39,  6.84it/s]RTED GB model is loaded.\n",
+      " 58%|█████████████████████████████████████████████████████████▊                                         | 2100/3600 [03:36<03:30,  7.12it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4745.15\n",
-      " 67%|████████████████████████████████████████████████████████████████████████████▋                                      | 2400/3600 [04:26<03:06,  6.44it/s]RTED GB model is loaded.\n",
+      " 67%|██████████████████████████████████████████████████████████████████                                 | 2400/3600 [24:46<32:26,  1.62s/it]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.7\n",
-      " 75%|██████████████████████████████████████████████████████████████████████████████████████▎                            | 2700/3600 [05:16<02:30,  5.99it/s]RTED GB model is loaded.\n",
+      " 75%|██████████████████████████████████████████████████████████████████████████▎                        | 2700/3600 [46:47<02:15,  6.65it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4706.313\n",
-      " 83%|███████████████████████████████████████████████████████████████████████████████████████████████▊                   | 3000/3600 [06:08<01:45,  5.70it/s]RTED GB model is loaded.\n",
+      " 83%|██████████████████████████████████████████████████████████████████████████████████▌                | 3000/3600 [47:35<01:29,  6.72it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4674.047\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████████████▍         | 3300/3600 [07:02<00:54,  5.46it/s]RTED GB model is loaded.\n",
+      " 92%|██████████████████████████████████████████████████████████████████████████████████████████▊        | 3300/3600 [48:28<00:53,  5.57it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4683.571\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [08:00<00:00,  7.49it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [49:23<00:00,  1.21it/s]\n"
      ]
     }
    ],
@@ -874,30 +876,7 @@
     }
    ],
    "source": [
-    "if save_data:\n",
-    "    # --- save output ---\n",
-    "    file_beging = 'cosim_'\n",
-    "    sim_name = 'ieee39_s'\n",
-    "\n",
-    "    cosim_out.to_csv(file_beging + sim_name + '_out.csv', index=False)\n",
-    "    sse_out.to_csv(file_beging + sim_name + '_sse.csv', index=False)\n",
-    "    bu_df.to_csv(file_beging + sim_name + '_bu.csv', index=False)\n",
-    "    bd_df.to_csv(file_beging + sim_name + '_bd.csv', index=False)\n",
-    "    pg_df.to_csv(file_beging + sim_name + '_pg.csv', index=False)\n",
-    "    agc_mile.to_csv(file_beging + sim_name + '_agcm.csv', index=False)\n",
-    "    sfr_res.to_csv(file_beging + sim_name + '_sfr.csv', index=False)\n",
-    "    ev_agc.to_csv(file_beging + sim_name + '_evagc.csv', index=False)\n",
-    "    ev_soc.iloc[0:800].to_csv(file_beging + sim_name + '_evsoc1.csv', index=False)\n",
-    "    ev_soc.iloc[800:].to_csv(file_beging + sim_name + '_evsoc2.csv', index=False)\n",
-    "    sse.ev.to_csv(file_beging + sim_name + '_evdata.csv', index=False)\n",
-    "\n",
-    "    import csv\n",
-    "    new_path = open(file_beging + sim_name + '_rted.csv', 'w')\n",
-    "    z = csv.writer(new_path)\n",
-    "    for new_k, new_v in rted_res.items():\n",
-    "        z.writerow([new_k, new_v])\n",
-    "    new_path.close()\n",
-    "    print('Successfully save data.')"
+    "%run -i 'cosim_savedata.py'"
    ]
   }
  ],
