--- a/jwang/notes/cosim_ev_ieee39_fict.ipynb
+++ b/jwang/notes/cosim_ev_ieee39_fict.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.post4558.dev0+g849a249\n",
+      "0.post4560.dev0+g156870b\n",
       "2.8.0\n"
      ]
     }
@@ -84,6 +84,8 @@
    "source": [
     "# if save the data to CSV\n",
     "save_data = True\n",
+    "file_beging = 'cosim_'\n",
+    "sim_name = 'ieee39_fict'\n",
     "\n",
     "# case parameters\n",
     "caseH = 18  # start time [H] of the co-simulation\n",
@@ -725,44 +727,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
+      "  0%|                                                                                                              | 0/3600 [00:00<?, ?it/s]RTED GB model is loaded.\n",
       "RTED removed: ['rampu', 'rampd']\n",
       "RTED is solved.\n",
       "RTED: total cost=4658.585\n",
-      "  8%|█████████▋                                                                                                          | 300/3600 [00:27<05:37,  9.77it/s]RTED GB model is loaded.\n",
+      "  8%|████████▎                                                                                           | 299/3600 [00:30<05:22, 10.22it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4648.937\n",
-      " 17%|███████████████████▎                                                                                                | 599/3600 [00:59<05:10,  9.66it/s]RTED GB model is loaded.\n",
+      " 17%|████████████████▋                                                                                   | 600/3600 [01:03<05:35,  8.94it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4684.231\n",
-      " 25%|█████████████████████████████                                                                                       | 900/3600 [01:35<05:22,  8.36it/s]RTED GB model is loaded.\n",
+      " 25%|█████████████████████████                                                                           | 900/3600 [01:40<05:35,  8.05it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4687.407\n",
-      " 33%|██████████████████████████████████████▎                                                                            | 1200/3600 [02:16<05:25,  7.38it/s]RTED GB model is loaded.\n",
+      " 33%|█████████████████████████████████                                                                  | 1200/3600 [02:22<05:35,  7.15it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4700.332\n",
-      " 42%|███████████████████████████████████████████████▉                                                                   | 1500/3600 [03:01<05:23,  6.49it/s]RTED GB model is loaded.\n",
+      " 42%|█████████████████████████████████████████▎                                                         | 1500/3600 [23:32<09:04,  3.86it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4697.086\n",
-      " 50%|█████████████████████████████████████████████████████████▌                                                         | 1800/3600 [03:50<04:58,  6.03it/s]RTED GB model is loaded.\n",
+      " 50%|█████████████████████████████████████████████████▌                                                 | 1800/3600 [45:30<04:19,  6.95it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.04\n",
-      " 58%|███████████████████████████████████████████████████████████████████                                                | 2100/3600 [04:41<04:18,  5.80it/s]RTED GB model is loaded.\n",
+      " 58%|█████████████████████████████████████████████████████████▊                                         | 2100/3600 [46:17<03:41,  6.78it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4742.24\n",
-      " 67%|████████████████████████████████████████████████████████████████████████████▋                                      | 2400/3600 [05:36<03:42,  5.40it/s]RTED GB model is loaded.\n",
+      " 67%|██████████████████████████████████████████████████████████████████                                 | 2400/3600 [47:09<03:36,  5.54it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4734.935\n",
-      " 75%|██████████████████████████████████████████████████████████████████████████████████████▎                            | 2700/3600 [06:33<02:49,  5.31it/s]RTED GB model is loaded.\n",
+      " 75%|██████████████████████████████████████████████████████████████████████████▎                        | 2700/3600 [48:03<02:39,  5.65it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4707.466\n",
-      " 83%|███████████████████████████████████████████████████████████████████████████████████████████████▊                   | 3000/3600 [07:31<01:37,  6.13it/s]RTED GB model is loaded.\n",
+      " 83%|██████████████████████████████████████████████████████████████████████████████████▌                | 3000/3600 [48:54<01:36,  6.23it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4674.215\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████████████████████████████████████▍         | 3300/3600 [08:23<00:52,  5.70it/s]RTED GB model is loaded.\n",
+      " 92%|██████████████████████████████████████████████████████████████████████████████████████████▊        | 3300/3600 [49:43<00:50,  5.95it/s]RTED GB model is loaded.\n",
       "RTED is solved.\n",
       "RTED: total cost=4679.87\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [09:17<00:00,  6.46it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 3600/3600 [50:35<00:00,  1.19it/s]\n"
      ]
     }
    ],
@@ -878,31 +880,17 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully save data.\n"
+     ]
+    }
+   ],
    "source": [
-    "if save_data:\n",
-    "    # --- save output ---\n",
-    "    file_beging = 'cosim_'\n",
-    "    sim_name = 'ieee39_fict'\n",
-    "\n",
-    "    cosim_out.to_csv(file_beging + sim_name + '_out.csv', index=False)\n",
-    "    sse_out.to_csv(file_beging + sim_name + '_sse.csv', index=False)\n",
-    "    bu_df.to_csv(file_beging + sim_name + '_bu.csv', index=False)\n",
-    "    bd_df.to_csv(file_beging + sim_name + '_bd.csv', index=False)\n",
-    "    pg_df.to_csv(file_beging + sim_name + '_pg.csv', index=False)\n",
-    "    agc_mile.to_csv(file_beging + sim_name + '_agcm.csv', index=False)\n",
-    "    sfr_res.to_csv(file_beging + sim_name + '_sfr.csv', index=False)\n",
-    "    ev_agc.to_csv(file_beging + sim_name + '_evagc.csv', index=False)\n",
-    "    ev_soc.iloc[0:800].to_csv(file_beging + sim_name + '_evsoc1.csv', index=False)\n",
-    "    ev_soc.iloc[800:].to_csv(file_beging + sim_name + '_evsoc2.csv', index=False)\n",
-    "    sse.ev.to_csv(file_beging + sim_name + '_evdata.csv', index=False)\n",
-    "\n",
-    "    import csv\n",
-    "    new_path = open(file_beging + sim_name + '_rted.csv', 'w')\n",
-    "    z = csv.writer(new_path)\n",
-    "    for new_k, new_v in rted_res.items():\n",
-    "        z.writerow([new_k, new_v])\n",
-    "    new_path.close()"
+    "%run -i 'cosim_savedata.py'"
    ]
   }
  ],
